# CMake-Tutorial

./: README.md
Demo/: CMakeLists.txt
Demo-BuildWithCmake/dlls/: CMakeLists.txt
Demo-BuildWithCmake/dlls/dll1/: CMakeLists.txt  dll1.cpp  dll1.h
Demo-BuildWithCmake/exes/: CMakeLists.txt
Demo-BuildWithCmake/exes/exe1/: CMakeLists.txt  main.cpp
Demo-BuildWithCmake/libssrc/lib1/: lib1.cpp  lib1.h
Demo/dlls/: CMakeLists.txt
Demo/dlls/dll1/: CMakeLists.txt
Demo/exes/: CMakeLists.txt
Demo/exes/exe1/: CMakeLists.txt
Demo/inc/: head1.h
Demo/libssrc/: CMakeLists.txt
Demo/libssrc/lib1/: CMakeLists.txt
OtherDemo/: README.md
